<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Assignment App</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="forgot_msg">Password Will be sent via SMS or Email</string>
<string name="lbl_financialas">Financialas</string>
<string name="lbl_apple_inc">Apple Inc.</string>
<string name="lbl_recommended">Recommended</string>
<string name="lbl_home">Home</string>
<string name="lbl_3_000">$3.000</string>
<string name="lbl_300">300</string>
<string name="lbl_05pm">05pm</string>
<string name="lbl_hour">Hour</string>
    <string name="get_latest_app">Please Download Latest Version</string>
    <string name="get_latest_app_desc">You are using an old app please download latest version</string>
<string name="lbl_700">700</string>
<string name="lbl_20_may_2022">20 May 2022</string>
<string name="lbl_2_6">+2,6%</string>
<string name="lbl_5d">5d</string>
<string name="lbl_2_4">-2,4%</string>
<string name="lbl_search_stocks">Search Stocks</string>
<string name="lbl_hot_this">Hot This</string>
<string name="lbl_leaders_2">Leaders 2</string>
<string name="lbl_users_choice">Users Choice</string>
<string name="lbl_912345567765">+912345567765</string>
<string name="lbl_month">Month</string>
<string name="msg_today_transacti">Today Transactions</string>
<string name="lbl_45_89_inr">₹ 45.89</string>
<string name="lbl_dropbox">Dropbox</string>
<string name="lbl_6_month">6 Month</string>
<string name="lbl_apple">Apple</string>
<string name="lbl_all2">All</string>
<string name="lbl_22_may_2022">22 May 2022</string>
<string name="lbl_google">Google</string>
<string name="lbl_1200_inr">₹ +1200</string>
<string name="lbl_hello_niles">Hello, Niles</string>
<string name="lbl_04pm">04pm</string>
<string name="lbl_starbucks">Starbucks</string>
<string name="lbl_details">Details</string>
<string name="lbl_company">Company </string>
<string name="msg_in_publishing_a">In publishing and graphic desi,
Lorem ipsum is a placeholderd 
common ipsum is a placeholde </string>
<string name="lbl_payment">Payment</string>
<string name="lbl_36_500_00">$36,500.00</string>
<string name="lbl_982_82">982.82</string>
<string name="lbl_transfer">Transfer</string>
<string name="lbl_24_may_2022">24 May 2022</string>
<string name="lbl_add_collect">Add Collect</string>
<string name="lbl_1m">1m</string>
<string name="lbl_2300_inr">₹ 2300</string>
<string name="lbl_3_500">$3.500</string>
<string name="lbl_1y">1y</string>
<string name="lbl_my_profile">My Profile</string>
<string name="lbl_4_000">$4.000</string>
<string name="lbl_13_78_inr">₹ 13.78</string>
<string name="lbl_900">900</string>
<string name="lbl_volume">Volume</string>
<string name="lbl_32_56">+%32.56</string>
<string name="lbl_100">100</string>
<string name="lbl_782_00">782.00</string>
<string name="lbl_120_89_inr">₹ 120.89</string>
<string name="lbl_wallet">Wallet</string>
<string name="lbl_500">500</string>
<string name="lbl_03pm">03pm</string>
<string name="lbl_sell_now">Sell Now</string>
<string name="lbl_overview">Overview</string>
<string name="lbl_most_popular">Most Popular</string>
<string name="lbl_25_inr">₹ 25</string>
<string name="lbl_transaction">Transaction</string>
<string name="lbl_1d">1D</string>
<string name="lbl_cheapest">Cheapest</string>
<string name="lbl_3_642_89">$3,642.89</string>
<string name="lbl_2_500">$2.500</string>
<string name="lbl_120_89">$120.89</string>
<string name="lbl_45_inr">₹ 45</string>
<string name="lbl_9_453_76">9,453.76</string>
<string name="lbl_700_inr">₹ +700</string>
<string name="lbl_institutional">Institutional</string>
<string name="lbl_open_price">Open Price</string>
<string name="lbl_top_up">Top-up</string>
<string name="lbl_buy_now">Buy Now</string>
<string name="lbl_stocks">Stocks</string>
<string name="lbl_12_574_43">$12,574.43</string>
<string name="lbl_jai_singh">Jai Singh</string>
<string name="lbl_replenish">Replenish</string>
<string name="lbl_get_pro_tips">Get Pro Tips</string>
<string name="lbl_24h_high">24h High</string>
<string name="lbl_packs_98">Packs 98</string>
<string name="lbl_search">Search</string>
<string name="lbl_0">0</string>
<string name="msg_file_hosting_se">File hosting services </string>
<string name="lbl_aapl">AAPL</string>
<string name="lbl_200">$200</string>
<string name="lbl_06pm">06pm</string>
<string name="lbl_24h_low">24h Low</string>
<string name="lbl_3_54">+3,54%</string>
<string name="lbl_02pm">02pm</string>
<string name="lbl_current_balance">Current Balance</string>
<string name="lbl_1_9">%1.9</string>
<string name="lbl_popular">Popular</string>
<string name="lbl_2_000">$2.000</string>
<string name="lbl_149_64">$149,64</string>
<string name="lbl_all">all</string>
<string name="lbl_more">More</string>
<string name="lbl_market_stats">Market Stats</string>
<string name="lbl_1500_inr">₹ +1500</string>
<string name="lbl_yearly">Yearly</string>
<string name="lbl_welcome_back">Welcome Back!</string>
<string name="lbl_netflix">Netflix</string>
<string name="lbl_day">Day</string>
<string name="lbl_1_54">+1,54%</string>
<string name="lbl_2_21">+2.21%</string>
<string name="lbl_2_782_002">$2,782,002</string>
<string name="msg_by_dylan_mering">By Dylan Meringue</string>
<string name="lbl_amazon">Amazon</string>
    <string name="home">Home</string>
    <string name="stocks">Stocks</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="inv_reports">Investment Reports</string>
    <string name="my_order">My Orders</string>
    <string name="watch_list">Watch List</string>
    <string name="faq">FAQ</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="download_reports">Download Reports</string>
    <string name="login">Login Here</string>
    <string name="dont_have_acc">Don\'t have account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="forgot_pass1">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="welcome">Welcome</string>
    <string name="email1">Email Address</string>
    <string name="password">Password</string>
    <string name="remeber_password">Remeber Password?</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_acc">Already have account?</string>
    <string name="name">Full Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pan">Pan Number</string>
    <string name="aadhar">Aadhar</string>
    <string name="update">Update</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="dummy_content">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</string>
    <string name="support">Support</string>
    <string name="risk_profile">Risk Profile</string>
    <string name="account_details">Account Details</string>
    <string name="notifications">Notifications</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_desc">Are you sure?</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc">Ifsc Code</string>
    <string name="account_name">Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="support_details">Support Details</string>
    <string name="ticket_update">Ticket Update</string>
    <string name="write_message_here">Write your message here</string>
    <string name="edit_error_msg">Please Enter</string>
    <string name="download">Download</string>
    <string name="intr_msg">Please Connect to Network</string>
    <string name="please_sel">Please Select</string>
    <string name="pass_length_error">Password should have alteast 6 charactors</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="noti_key">xcvnsjdgn</string>
    <string name="enter_same_password">Please Enter Same New Password</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="blogs">Blogs</string>
    <string name="invest_now">Invest Now</string>
    <string name="amount_invest_title">How much you want to Invest?</string>
    <string name="amount">Amount</string>
    <string name="min_amt_msg">Minimum Purchase Amount is ₹</string>
    <string name="about_us">About Us</string>
    <string name="request_support">Request Support</string>
    <string name="new_update">New update</string>
    <string name="bank_details">Bank Account Details</string>
    <string name="stock_details">Stock Details</string>
    <string name="order_details">Order Details</string>
    <string name="blog_details">Blog Details</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="roll_no">Roll Number</string>
    <string name="classrooms">Class Rooms</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="other">Other</string>
    <string name="class1">Class Name</string>
    <string name="save">Save</string>
    <string name="class2">Class ID</string>
    <string name="new_teacher">New Teacher</string>
    <string name="new_student">New Student</string>
    <string name="new_class">New Class</string>
    <string name="coordinator_email">Coordinator Email</string>
    <string name="desc">Description</string>
    <string name="new_assign">New Assignment</string>
    <string name="select_last_date">Select Last Date</string>
    <string name="last_date">Last Date</string>
    <string name="select_class">Select Class</string>
    <string name="assigns">Assignments</string>
    <string name="subjects">Subjects</string>
    <string name="sub_name">Subject Name</string>
    <string name="new_subject">New Subject</string>
    <string name="select_subject">Select Subject</string>
    <string name="privillged">Privileged</string>
    <string name="not_privillged">Not Privileged</string>
    <string name="send">Send</string>
</resources>
