<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_layout_root"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/margin"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin1"
        android:background="@drawable/round_ract00"
        android:backgroundTint="@color/white"
        android:layout_below="@id/tool"
        android:padding="@dimen/margin1">

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size6"
            android:layout_marginTop="@dimen/margin_xxxlg"
            android:layout_marginBottom="@dimen/margin1"
            android:background="@drawable/round_ract1"
            android:backgroundTint="@color/app_color"
            android:fontFamily="@font/font2"
            android:layout_below="@id/for_rl"
            android:includeFontPadding="false"
            android:onClick="LoginNow"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_lg" />

        <RelativeLayout
            android:id="@+id/xmncmv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size6"
            android:layout_below="@id/bt1"

            android:gravity="center">

            <TextView
                android:id="@+id/t11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/font1"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/sizesm1"
                android:text="@string/dont_have_acc"
                android:textAllCaps="true"
                android:onClick="RegNow"
                android:textColor="@color/dgry"
                android:textSize="@dimen/txt_size_md1" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin"
                android:layout_toRightOf="@id/t11"
                android:fontFamily="@font/font2"
                android:onClick="RegNow"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/sizesm1"
                android:text="@string/sign_up_here"
                android:textAllCaps="true"
                android:textColor="@color/app_color"
                android:textSize="@dimen/txt_size_md1"
                android:textStyle="bold" />
        </RelativeLayout>




        <RelativeLayout
            android:id="@+id/for_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_rl"
            android:layout_marginTop="@dimen/margin1"
            android:layout_marginRight="@dimen/margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/font1"
                    android:includeFontPadding="false"
                    android:text="@string/forgot_pass1"
                    android:textColor="@color/dgry1"
                    android:textSize="@dimen/txt_size_md1" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_toRightOf="@id/t1"
                    android:fontFamily="@font/font2"
                    android:includeFontPadding="false"
                    android:onClick="ForNow"
                    android:text="@string/click_here"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/txt_size_md1" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/txt2"
            android:layout_width="@dimen/size62"
            android:layout_height="@dimen/sizesm1"
            android:layout_below="@id/txt1"
            android:background="@drawable/round_ract0"
            android:backgroundTint="@color/app_color"
            android:layout_marginTop="@dimen/margin1"
            android:layout_marginRight="@dimen/margin_xlg"

            />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:fontFamily="@font/font3"
            android:includeFontPadding="false"

            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_xxlg"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:hint="@string/email1"
            android:textColorHint="@color/dgry"
            android:layout_marginTop="@dimen/margin_xxxlg"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/sizesm1"
                android:textColor="@color/dgry1"
                android:textSize="@dimen/txt_size_md1"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_rl"
            android:hint="@string/password"
            android:textColorHint="@color/dgry"
            android:layout_marginTop="@dimen/margin1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"

                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/sizesm1"
                android:textColor="@color/dgry"
                android:textSize="@dimen/txt_size_md1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <include
        android:id="@+id/tool"
        layout="@layout/my_tool" />
</RelativeLayout>