<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <include layout="@layout/my_tool" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl1"
        android:layout_marginTop="@dimen/margin_md"
        android:background="@drawable/round_ract00"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt2"
                android:hint="@string/title"
                android:textColorHint="@color/dgry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font1"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:lineSpacingExtra="@dimen/sizesm1"
                    android:textColor="@color/dgry1"
                    android:textSize="@dimen/txt_size_md1" />
            </com.google.android.material.textfield.TextInputLayout>


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_marginTop="@dimen/margin1"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/txt2"-->
<!--                android:hint="@string/coordinator_email"-->
<!--                android:textColorHint="@color/dgry">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/et2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/font1"-->
<!--                    android:includeFontPadding="false"-->
<!--                    android:inputType="textEmailAddress"-->
<!--                    android:lineSpacingExtra="@dimen/sizesm1"-->
<!--                    android:textColor="@color/dgry1"-->
<!--                    android:textSize="@dimen/txt_size_md1" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size6"
                android:onClick="SelDateTime"
                android:layout_marginTop="@dimen/margin1"
                android:background="@drawable/round_ract2"
                android:backgroundTint="@color/app_color">

                <TextView
                    android:id="@+id/datetime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"

                    android:fontFamily="@font/font2"
                    android:gravity="center"
                    android:onClick="SelDateTime"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/select_last_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_lg" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size6"
                android:onClick="SelSub"
                android:layout_marginTop="@dimen/margin1"
                android:background="@drawable/round_ract2"
                android:backgroundTint="@color/app_color">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"

                    android:fontFamily="@font/font2"
                    android:gravity="center"
                    android:onClick="SelSub"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/select_subject"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_lg" />
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin1"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt2"
                android:hint="@string/desc"
                android:textColorHint="@color/dgry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font1"
                    android:includeFontPadding="false"
                    android:minLines="4"
                    android:maxLines="8"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="@dimen/sizesm1"
                    android:textColor="@color/dgry1"
                    android:textSize="@dimen/txt_size_md1" />
            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size6"
                android:onClick="LoginNow"
                android:layout_marginTop="@dimen/margin_xxlg"
                android:background="@drawable/round_ract1"
                android:backgroundTint="@color/app_color">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:onClick="LoginNow"
                    android:fontFamily="@font/font2"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_lg" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>